# ProcureMinds

./: .env.example  .gitignore  EMAIL_PROCESSING_README.md  INTENT_CLASSIFICATION_README.md  QUICKSTART.md  START_HERE.md  SYSTEM_SUMMARY.md  example_intent_workflow.py  example_quotation_processing.py  main.py  pyproject.toml  requirements_email_processing.txt  test_api_curl.bat  test_api_curl.sh  test_email_processing.py  test_intent_example.py
alembic/: env.py
alembic/versions/: 187714a9ee44_initial_migration.py  3160670fade9_add_init.py  505dadd05111_add_vendors.py  5f129fc95f3b_test.py  a68f07bef6c0_add_email_table.py  b6217cf0ddc2_add_vendors_and_rfqs.py  bcbd3ea33fbe_test.py  c927aa16fe12_added_new_table.py
app/: config.py  gmail_utils.py  main.py  routes.py
app/api/: gmail.py
app/benchmarks/: boq_compute.py  ruleset_engine.py  validation_attempts.py  validation_engine.py
app/core/: config.py  database.py  security.py
app/langgraph/: __init__.py  langgraph_manager.py
app/listings/: project_boq.py  rfqs_listing.py
app/models/: __init__.py  benchmark_categories.py  benchmarks.py  boq.py  boq_category.py  boq_csv.py  boq_item.py  emails.py  item_categories.py  master_rule_item.py  master_rule_set.py  project.py  project_gmail_tokens.py  rfqs.py  rule_item.py  rule_set.py  user.py  validation_attempts.py  vendors.py  workflow.py
app/outbound/: outbound_mail_generator.py  smtp_mail.py  vendor_list_parser.py
app/schemas/: __init__.py  auth.py  boq.py  intent.py  project.py  quotation.py  vendor.py  (+2 more)
examples/: setup_s3_bucket.py  test_storage_service.py
(+39 files in other folders)
