[project]
name = "procureminds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "python-dotenv>=1.0.0",
    "google-auth>=2.34.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.147.0",
    "google-generativeai>=0.8.5",
]
